# Purevision

./: README.md  README.txt  tempo readme
Decision/: Programmes_Decision_README.txt
Decision/Documents_annexes/: Note algorithme de parsing (09_11_2021).txt  Règlementation Conduite.docx  Système de décision.pptx  Tableau tri croisé.xlsx  idée code switch case.docx
Decision/Interface_Utilisateur/Java Swing/demoswing/: .project
Decision/Interface_Utilisateur/Java Swing/testui/: .project
Decision/Programmes_Decision/Comparaison/Test_Comparaison_Chaine_de_Caractere_v1/: Test_Comparaison_Chaine_Caracteres
Decision/Programmes_Decision/New_Programme_Decision/: decision_v2  decision_v2.c
detection_panneau/: Detection_FeuRouge_Video.cpp  Detection_FeuVert_Video.cpp  Detection_Stop_Comp_V2.cpp  Detection_Stop_Simple_plus.cpp  a.out
detection_panneau/images_test/: Untitled 1.odp
ros_src/: subpub3.cpp
ros_src/picar_vision/: CMakeLists.txt  package.xml
ros_src/picar_vision/scripts/: listener.py  picar_4wd.py
ros_src/picar_vision/src/: comptage.cpp  comptage.h  follow_line.cpp  follow_line.h  follow_line_V2.cpp  follow_line_v1.cpp  listener_c.cpp  panneau_video.cpp  panneau_video.h  picar_vision.cpp  picar_vision.h  talker_c.cpp
src/: Decision_test.c  a.out  decision_v2.c  detect_ligne.cpp  detect_ligne.py
src/old/: Acquisition.cpp  Panneaux_Video.cpp  detect_ligne_theta  detect_ligne_theta.cpp  detect_ligne_theta_rho.cpp  txt.txt
src/picar_purevision/src/: data_ros.h  follow_line.cpp  follow_line.h  panneau_video.cpp  picar_vision  picar_vision.cpp
(+37 files in other folders)
